updated paths for os independency

--- a/examples/pull_telemetry_example.ipynb
+++ b/examples/pull_telemetry_example.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,14 +163,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['a1', 'uMean', 'lat', 'b2', 'Hs', 'check', 'sensorType', 'lon', 'salinity', 'Tp', 'vMean', 'b1', 'zMean', 'E', 'a2', 'volt', 'f', 'Dp', 'temp', 'datetime'])\n",
+      "dict_keys(['lat', 'salinity', 'volt', 'b2', 'b1', 'Hs', 'a1', 'zMean', 'check', 'temp', 'f', 'vMean', 'Tp', 'uMean', 'lon', 'datetime', 'sensorType', 'Dp', 'E', 'a2'])\n",
       "98\n"
      ]
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
