improves pep8 compliancy

--- a/examples/pull_telemetry_example.ipynb
+++ b/examples/pull_telemetry_example.ipynb
@@ -887,7 +887,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('microSWIFT_io')",
+   "display_name": "Python 3.9.13 ('microSWIFTtelemetry_python3-9')",
    "language": "python",
    "name": "python3"
   },
@@ -906,7 +906,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b37a3622407475bb31fdc8e2c0acfabd1e5c0ecc58f123c0a1c5d07c8cb598ed"
+    "hash": "98440043203a85f10ccc7c3bec7087660cc6e79aa53a37fbe586b070f1342e51"
    }
   }
  },
