creates top level unittests

--- a/examples/pull_telemetry_example.ipynb
+++ b/examples/pull_telemetry_example.ipynb
@@ -428,7 +428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pull telemetry from microSWIFT057 during Hurricane Ian and store it in memory as a Python dictionary. Extract the time and significant wave height as variables. Since the microSWIFTs were configured to report two wave estimates during this deployment, IMU-based (volt == 0) and GPS-based (volt == 1), filter for the GPS-based estimates and plot the result."
+    "Pull telemetry from microSWIFT057 during Hurricane Ian and store it in memory as a Python dictionary. Extract the time and significant wave height as variables. Since the microSWIFTs were configured to report two wave estimates during this deployment, IMU-based (voltage == 0) and GPS-based (voltage == 1), filter for the GPS-based estimates and plot the result."
    ]
   },
   {
@@ -452,12 +452,12 @@
     "                                   var_type='dict')\n",
     "\n",
     "t = np.array(SWIFT_dict['datetime'])\n",
-    "Hs = np.array(SWIFT_dict['Hs'])\n",
-    "volt_flag = np.array(SWIFT_dict['volt'])\n",
+    "significant_height = np.array(SWIFT_dict['significant_height'])\n",
+    "volt_flag = np.array(SWIFT_dict['voltage'])\n",
     "\n",
     "\n",
     "fig,ax = plt.subplots(1,1)\n",
-    "ax.scatter(t[volt_flag == 1], Hs[volt_flag == 1], label = 'GPS estimate')\n",
+    "ax.scatter(t[volt_flag == 1], significant_height[volt_flag == 1], label = 'GPS estimate')\n",
     "ax.set_ylabel('Significant Wave Height (m)')\n",
     "plt.xticks(rotation=30)\n",
     "ax.legend()"
@@ -490,10 +490,10 @@
     "                                 end_date=end,\n",
     "                                 var_type='pandas')\n",
     "\n",
-    "SWIFT_GPS = SWIFT_df[SWIFT_df['volt'] == 1]\n",
+    "SWIFT_GPS = SWIFT_df[SWIFT_df['voltage'] == 1]\n",
     "\n",
     "fig,ax = plt.subplots(1,1)\n",
-    "ax.scatter(SWIFT_GPS.index, SWIFT_GPS['Hs'], label = 'GPS estimate')\n",
+    "ax.scatter(SWIFT_GPS.index, SWIFT_GPS['significant_height'], label = 'GPS estimate')\n",
     "ax.set_ylabel('Significant Wave Height (m)')\n",
     "plt.xticks(rotation=30)\n",
     "ax.legend()"
