--- a/examples/pull_telemetry_example.ipynb
+++ b/examples/pull_telemetry_example.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -12,6 +13,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -35,6 +37,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -47,6 +50,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -54,6 +58,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -63,6 +68,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -79,6 +85,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -95,6 +102,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -114,6 +122,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -121,6 +130,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -133,6 +143,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -147,16 +158,34 @@
    "source": [
     "from microSWIFTtelemetry import pull_telemetry_as_var\n",
     "\n",
-    "SWIFT_dict = pull_telemetry_as_var(buoy_id=buoy_id,\n",
-    "                                   start_date=start,\n",
-    "                                   end_date=end,\n",
-    "                                   var_type='dict')\n",
+    "SWIFT_dict, errors_dict = pull_telemetry_as_var(buoy_id=buoy_id,\n",
+    "                                                start_date=start,\n",
+    "                                                end_date=end,\n",
+    "                                                var_type='dict')\n",
     "\n",
     "print(SWIFT_dict.keys()) # e.g. SWIFT_dict['datetime']\n",
     "print(len(SWIFT_dict['datetime'])) # print number of entries"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `errors_dict` contains any error messages reported by the buoy or that occur during parsing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(errors_dict.keys())"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -171,15 +200,16 @@
    "source": [
     "from microSWIFTtelemetry import pull_telemetry_as_var\n",
     "\n",
-    "SWIFT_dict = pull_telemetry_as_var(buoy_id=buoy_id,\n",
-    "                                   start_date=start,\n",
-    "                                   var_type='dict')\n",
+    "SWIFT_dict, errors_dict = pull_telemetry_as_var(buoy_id=buoy_id,\n",
+    "                                                start_date=start,\n",
+    "                                                var_type='dict')\n",
     "\n",
     "print(SWIFT_dict.keys()) # e.g. SWIFT_dict['datetime']\n",
     "print(len(SWIFT_dict['datetime'])) # print number of entries"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -194,15 +224,17 @@
    "source": [
     "from microSWIFTtelemetry import pull_telemetry_as_var\n",
     "\n",
-    "SWIFT_df = pull_telemetry_as_var(buoy_id=buoy_id,\n",
-    "                                 start_date=start,\n",
-    "                                 end_date=end,\n",
-    "                                 var_type='pandas')\n",
+    "SWIFT_df, errors_df = pull_telemetry_as_var(buoy_id=buoy_id,\n",
+    "                                            start_date=start,\n",
+    "                                            end_date=end,\n",
+    "                                            var_type='pandas')\n",
     "\n",
-    "print(SWIFT_df.info())"
+    "print(SWIFT_df.info())\n",
+    "print(errors_df.info())"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -224,6 +256,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -231,6 +264,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -248,17 +282,20 @@
     "from microSWIFTtelemetry import pull_telemetry_as_var\n",
     "\n",
     "microSWIFTs = dict() # initialize a dict to store individual DataFrames\n",
+    "errors = dict()\n",
     "\n",
     "for buoy_id in buoy_ids:\n",
-    "    microSWIFTs[buoy_id] = pull_telemetry_as_var(buoy_id=buoy_id,\n",
-    "                                                 start_date=start,\n",
-    "                                                 end_date=end,\n",
-    "                                                 var_type='pandas')\n",
+    "    # Here the error output is intentionally suppressed with `_`\n",
+    "    microSWIFTs[buoy_id], _ = pull_telemetry_as_var(buoy_id=buoy_id,\n",
+    "                                                    start_date=start,\n",
+    "                                                    end_date=end,\n",
+    "                                                    var_type='pandas')\n",
     "\n",
     "print(microSWIFTs.keys())"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -275,6 +312,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -297,6 +335,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -304,6 +343,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -325,6 +365,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -349,6 +390,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -368,6 +410,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -390,6 +433,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -397,6 +441,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -418,6 +463,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -425,6 +471,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -446,10 +493,10 @@
     "start = datetime(2022,9,26,0,0,0)\n",
     "end = datetime(2022,10,1,0,0,0)\n",
     "\n",
-    "SWIFT_dict = pull_telemetry_as_var(buoy_id=buoy_id,\n",
-    "                                   start_date=start,\n",
-    "                                   end_date=end,\n",
-    "                                   var_type='dict')\n",
+    "SWIFT_dict, _ = pull_telemetry_as_var(buoy_id=buoy_id,\n",
+    "                                     start_date=start,\n",
+    "                                     end_date=end,\n",
+    "                                     var_type='dict')\n",
     "\n",
     "t = np.array(SWIFT_dict['datetime'])\n",
     "significant_height = np.array(SWIFT_dict['significant_height'])\n",
@@ -464,6 +511,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -479,16 +527,16 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from microSWIFTtelemetry import pull_telemetry_as_var\n",
-    "from datetime import datetime \n",
+    "from datetime import datetime\n",
     "\n",
     "buoy_id = '057'\n",
     "start = datetime(2022,9,26,0,0,0)\n",
     "end = datetime(2022,10,1,0,0,0)\n",
     "\n",
-    "SWIFT_df = pull_telemetry_as_var(buoy_id=buoy_id,\n",
-    "                                 start_date=start,\n",
-    "                                 end_date=end,\n",
-    "                                 var_type='pandas')\n",
+    "SWIFT_df, _ = pull_telemetry_as_var(buoy_id=buoy_id,\n",
+    "                                   start_date=start,\n",
+    "                                   end_date=end,\n",
+    "                                   var_type='pandas')\n",
     "\n",
     "SWIFT_GPS = SWIFT_df[SWIFT_df['voltage'] == 1]\n",
     "\n",
